adding basics of sql internal links

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -7,15 +7,15 @@
   </h1>
 
   <div class="container">
-    <h1>Welcome here</h1>
+    <h1 class="my-5">Welcome here</h1>
   </div>
 
-  <ul>
-    <% for(const post of posts) { %>
-      <li>
-        <%= post.title %>
-      </li>
+  <div class="row row-cols-2">
+    <% for (const post of posts) { %>
+      <div class="col mb-2">
+        <%- include('./shared/post.ejs', {post}) %>
+      </div>
       <% } %>
-  </ul>
+  </div>
 
   <%- include('./shared/footer.ejs') %>
